src/objects/MUSW__Automation_Filter__c.object
<CustomObject>
    <description>Automation Rule Filter criteria</description>
    <fields>
        <fullName>MUSW__Action_Type__c</fullName>
        <description>Specifies the circumstances to which the filter is restricted. One filter per rule must have an action specified to determine which object is the triggering event.</description>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the filter should be considered or ignored.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Automation_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the rule this filter is a part of.</description>
        <label>Automation Rule</label>
        <referenceTo>MUSW__Automation_Rule__c</referenceTo>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Field__c</fullName>
        <description>Specifies which field the filter criteria must inspect.</description>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Group_Condition__c</fullName>
        <description>The filter types for an entire record (not a field). &quot;Not Exists&quot; is the only option at this time (&quot;Exists&quot; is implicit in all filters).</description>
        <inlineHelpText>Use NOT EXISTS if you want the rule to fire when there are NO records that match every filter in the group. eg. NOT EXISTS construction fees but unpaid, or inspection tasks but open, or required submittals but not loaded.</inlineHelpText>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NOT EXISTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Group__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used to sort (with Order) filters on this rule. It is also used in association with the group condition when indicated.</description>
        <label>Group</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Operator__c</fullName>
        <description>Specifies what comparison operation the table field filter evaluated against the value.</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>CONTAINS</fullName>
                </value>
                <value>
                    <fullName>NOT IN</fullName>
                </value>
                <value>
                    <fullName>NOT CONTAINS</fullName>
                </value>
                <value>
                    <fullName>IS CHANGED</fullName>
                </value>
                <value>
                    <fullName>NOT CHANGED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The sorted order - first by group, then by the order in which filters are evaluated. Action filters are always pre-filtered first.</description>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Table__c</fullName>
        <description>Specifies which table the field filter criteria applies to.</description>
        <label>Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>MUSW__Application2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Complaint2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Condition__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Fee__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Inspection__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Inspection_Violation__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__License2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Milestone__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Parcel__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Permit2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Project2__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Receipt__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Review__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Submission__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Violation__c</fullName>
                </value>
                <value>
                    <fullName>MUSW__Work_Item__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Track_No__c</fullName>
        <description>Unique number of the filter that is used to migrate rule filter data</description>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Value__c</fullName>
        <description>Specifies what value the table field filter criteria is evaluated against. Can be a static value or a merge field.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Automation Filter</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MUSW__Value_Check_Syntax</fullName>
        <active>true</active>
        <description>Check syntax</description>
        <errorConditionFormula>OR(
   CONTAINS(MUSW__Value__c, &quot;&lt;content&gt;&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &quot;[a-zA-Z\\s\\d]*(\\&lt;content\\&gt;\\w+(\\.\\w+){1,2}\\&lt;/content\\&gt;)?[a-zA-Z\\s\\d]*&quot;),
   CONTAINS(MUSW__Value__c, &quot;\\{\\!&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &quot;[a-zA-Z\\s\\d]*(\\{\\!\\$?\\w+(\\.\\w+){1,2}\\})?[a-zA-Z\\s\\d]*&quot;) 
)</errorConditionFormula>
        <errorDisplayField>MUSW__Value__c</errorDisplayField>
        <errorMessage>Invalid Filter Value syntax</errorMessage>
    </validationRules>
</CustomObject>